Preenchimento do input

--- a/index.html
+++ b/index.html
@@ -19,21 +19,25 @@
 
 <body>
 
-    <input type="tel" placeholder="Digite seu telefone">
+    <input type="tel" placeholder="Digite seu telefone" class="texto">
     <section class="teclado">
-        <input type="button" value="1">
-        <input type="button" value="2">
-        <input type="button" value="3">
-        <input type="button" value="4">
-        <input type="button" value="5">
-        <input type="button" value="6">
-        <input type="button" value="7">
-        <input type="button" value="8">
-        <input type="button" value="9">
-        <input type="button" value="*">
-        <input type="button" value="0">
-        <input type="button" value="#">
+        <input type="button" value="1" class="tecla tecla-1">
+        <input type="button" value="2" class="tecla tecla-2">
+        <input type="button" value="3" class="tecla tecla-3">
+        <input type="button" value="4" class="tecla tecla-4">
+        <input type="button" value="5" class="tecla tecla-5">
+        <input type="button" value="6" class="tecla tecla-6">
+        <input type="button" value="7" class="tecla tecla-7">
+        <input type="button" value="8" class="tecla tecla-8">
+        <input type="button" value="9" class="tecla tecla-9">
+        <input type="button" value="*" class="tecla tecla-*">
+        <input type="button" value="0" class="tecla tecla-0">
+        <input type="button" value="#" class="tecla tecla-#">
     </section>
+    <br>
+    
+    <input type="button" value="Chamar" class="chamar">
+  
 
 
     <script src="./js/main.js"></script>
